# code

./: .gitignore  CMakeLists.txt  FL-animation.xml  animation.xml  blockchain.json  blockchain_saved_for_honesty.json  config.json  environment.yml  example-sixlowpan-0-1.pcap  example-sixlowpan-1-1.pcap  example-sixlowpan-1-2.pcap  example-sixlowpan-2-1.pcap  example-sixlowpan.tr  generated_nodes.csv  main.tr  ping-example-0-0.pcap  ping-example-1-0.pcap  ping-example-1-1.pcap  ping-example-2-0.pcap  resources_demo.xml  routingtable-wireless.xml  sync_wifi_0.00_2023-05-29_20-20-58.csv  table.csv  wireless-animation.xml
BRITE/.hg/: dirstate  hgrc  undo.desc
scratch/: CMakeLists.txt  FL-tasks.py  a.out  bc-topology-helper-bak.cc  bc-topology-helper-bak.h  bitcoin-test.cc  blockchain-malicious-node-trials.cc  blockchain-malicious-node.cc  blockchain-manager.cc  blockchain-manager.h  blockchain-node-helper.cc  blockchain-node-helper.h  blockchain-node.h  blockchain-simple-attacker.cc  blockchain-validator-helper.cc  blockchain-validator-helper.h  blockchain-validator.cc  blockchain.json  data.json  example.json  gateway-node.cc  iot-flat-topology-helper.cc  iot-flat-topology-helper.h  iot-layer-topology-helper.cc  iot-layer-topology-helper.h  iot-sensor-node.cc  iot-sensor-node.h  iot2.cc  network-evolve.cc  private-test-1.cc  scratch-simulator.cc  simulation.py  test.cc
scratch/a_plus_b/: run.py
scratch/subdir/: ActorCriticNetwork.py  BC-node.cc  BC-node.h  Blockchain.cc  Blockchain.h  FL-model.py  FL-node.cc  FL-node.h  FL-task-initiator.cc  FL-task-initiator.h  FL_model.py  FL_node.py  FL_tasks.py  ai-helper.cc  ai-helper.h  config.py  drl_utils.py  gab.py  generated_nodes.csv  genererate_nodes.py  main.cc  models.csv  reward  run.py  scratch-simulator.cc  simulation.py  test_drl_selection.py  update_honesty.py  update_nodes.py
scratch/subdir/DRL/: Training_DRL_fromColab.ipynb  drl.py  main_selection.py  tes.py  test.ipynb  train_DRL.ipynb
scratch/subdir/DRL/agent/: main_selection.py  node_selection_agent.py  node_selection_buffer.py  node_selection_networks.py
scratch/subdir/DRL/environment/: custom_action_space.py  custom_observation_space.py  node_selection_env.py
scratch/subdir/DRL/tmp/first_try_sac50/: actor_sac  target_value_sac
scratch/subdir/DRL/tmp/sac/: actor_sac  critic_1_sac  critic_2_sac  target_value_sac  value_sac
scratch/subdir/DRL/tmp/sac50/: critic_1_sac
scratch/subdir/model/: global
scratch/subdir/result/drl/drp60_mlc10/: blockchain.json
scratch/subdir/result/drl/sac_10_10/: actor_sac  critic_2_sac  target_value_sac  value_sac
scratch/subdir/result/hybrid/drp10_mlc10/: blockchain.json  models.csv
scratch/subdir/result/hybrid/drp10_mlc10_2/: blockchain.json  models.csv
scratch/subdir/result/hybrid/drp30_mlc10/: blockchain.json  models.csv
scratch/subdir/result/hybrid/drp30_mlc10_1/: blockchain.json  models.csv
scratch/subdir/result/hybrid/drp30_mlc10_3/: blockchain.json  models.csv
scratch/subdir/result/hybrid/drp60_mlc10/: models.csv
scratch/subdir/result/hybrid/drp60_mlc10_2/: blockchain.json  models.csv
scratch/subdir/result/score/drp10_mlc10_alpha08/: blockchain.json
scratch/subdir/result/score/drp10_mlc_10/: blockchain.json
scratch/subdir/result/score/drp30_mlc10/: models.csv
scratch/subdir/results/drl_01_01/: blockchain.json  models.csv
scratch/subdir/results/drl_01_03/: blockchain.json  models.csv
scratch/subdir/results/drl_01_06/: blockchain.json  models.csv
scratch/subdir/results/drl_dropout60/: blockchain.json
scratch/subdir/results/drl_drp30_mlc10/: blockchain.json  models.csv
scratch/subdir/results/drl_drp60_mlc10/: blockchain.json  models.csv  models1.csv
scratch/subdir/results/drl_drp60_mlc10/sac_60_10/: actor_sac  critic_2_sac  value_sac
scratch/subdir/results/drp10_mlc10_alpha08/: models.csv
scratch/subdir/results/hybrid_01_01/: blockchain.json  models.csv
scratch/subdir/results/hybrid_01_03/: blockchain.json  models.csv
scratch/subdir/results/hybrid_01_06/: blockchain.json  models.csv
scratch/subdir/results/hybrid_300/: blockchain18.json
scratch/subdir/results/hybrid_drop10_nodes150/: blockchain.json  models.csv
scratch/subdir/results/hybrid_drop30_nodes150/: blockchain.json  models.csv
scratch/subdir/results/hybrid_drop60_nodes150/: models.csv
scratch/subdir/results/hybrid_drp60_mlc10/: blockchain.json
scratch/subdir/results/hybrid_malicious30_nodes150/: models.csv
scratch/subdir/results/hybrid_malicious60_nodes150/: blockchain.json  models.csv
scratch/subdir/results/score_01_01/: models.csv
scratch/subdir/results/score_01_03/: blockchain.json  models.csv
scratch/subdir/results/score_01_06/: blockchain.json  blockchain1.json  models.csv  models1.csv
scratch/subdir/results/score_alpha02_50/: blockchain.json  models.csv
scratch/subdir/results/score_alpha02_nodes50/: models.csv
scratch/subdir/results/score_alpha05_nodes300/: blockchain.json  models.csv
scratch/subdir/results/score_alpha05_nodes50/: blockchain.json  blockchain_score_dataset.json  models.csv
scratch/subdir/results/score_alpha08_nodes150/: models.csv
scratch/subdir/results/score_alpha08_nodes300/: blockchain.json
scratch/subdir/results/score_alpha08_nodes50/: blockchain_score_dataset.json  models.csv  models_score_dataset.csv
scratch/subdir/results/score_dropout60/: models.csv
scratch/subdir/results/score_drp30_mlc10/: blockchain.json
scratch/subdir/results/score_drp60_mlc10/: blockchain.json  models.csv
scratch/subdir/results/score_malicious30/: models.csv
scratch/subdir/results/score_malicious60/: blockchain.json
scratch/subdir/tmp/sac/: actor_sac  critic_1_sac  critic_2_sac  target_value_sac  value_sac
scratch/subdir/tools/: CSVManager.py  models.csv
scratch/subdir/utils/: CSVManager.py  plot.ipynb  train_DRL.ipynb
scratch/wifi_exp/: fl-client-application.cc
src/applications/: CMakeLists.txt
src/applications/helper/: ai-helper.cc  ai-helper.h  bitcoin-topology-helper.cc
src/applications/model/: FL-node.cc  FL-node.h  FL-task-initiator.cc  FL-task-initiator.h
(+206 files in other folders)
